# cnn-cifar10_0

./: .gitignore  CMakeLists.txt  INPUT.txt  Makefile  O1.txt  O3_1.txt  README.md  WEIGHTS.txt  conv.c  image_gold.txt  layers.c  layers.h  main.c  main.cpp  malloc2D.h  network.c  network.h  out  out_1  out_2  sanitizer_out  test_functions.c  tests.c  tests.h
0-serial_code/: Makefile  layers_serial.c  main_serial.c
0.2-serial_pad/: Makefile  layers.c  main.c
1.1-Kernels/: layers.c  main.c
1.2-Parallel/: Makefile  layers.c  results.md
1.3-Parallel-pad/: layers.c  layers.h
2.1-Data-if/: main.c
2.2-Data-pad/: Makefile  layers.c  main.c
2.3-Data-pad-relu/: Makefile  layers.c  main.c  malloc2D.c
3.1-Data-pad-opt/: Results.md  layers.c
3.1-Parallel-relu-pool/: layers.c  main.c
3.1.2-Data-pad-opt/: layers.c  main.c
3.2-Opt-relu/: layers.c
3.3-Opt-fc/: layers.c  main.c
3.3-Opt-fc-softmax/: layers.c
3.4-Opt-accuracy/: main.c
4.1-If-parallel-opt/: layers.c
4.1-Parallel-relu-pool/: layers.c  timer.c
4.2-If-relu-pool/: layers.c  main.c
4.2-omp/: layers.c
4.3-If-full/: main.c
5.2-omp/: Makefile  main.c
CPP-OpenCV_version/: main.cpp
Notes/: 1-Introduction.md  1.2-Information.md  10-nv-timing-output.md  11-nsys-profile-report.md  2-Code.md  2.1-Flow-chart.md  3-CNN_Architecture.md  4-Parallelise.md  5-Network-Times.md  5-Parallelise_Conv.md  6-Timings.md  6.1-Serial-Timings.md  6.10-Full_on_GPU.md  6.2-Parallel-Timings.md  6.3-Parallel-Conv.md  6.4-Compair-Times.md  6.5-Parallel-Constructs.md  6.6-Padding-Struct.md  6.7-Paralle-Data.md  (+11 more)
(+136 files in other folders)
